vote-up btn - darker colour to increase contrast fixes #230

--- a/liqd_product/assets/scss/components/_rating.scss
+++ b/liqd_product/assets/scss/components/_rating.scss
@@ -54,7 +54,7 @@
 }
 
 .rating-up {
-    @include rating-button($brand-success);
+    @include rating-button($brand-primary);
 }
 
 .rating-down {
